syntax = "proto3";

package coop.drivers.foo.v1beta1;

import "coop/drivers/foo/v1beta1/foo.proto";
import "validate/validate.proto";

service FooService {
  rpc CreateFoo(CreateFooRequest) returns (CreateFooResponse) {}
  rpc GetFoo(GetFooRequest) returns (GetFooResponse) {}
}

message GetFooRequest {
  string id = 1 [(validate.rules).string.min_len = 1];
}

message GetFooResponse {
  Foo foo = 1;
}

message CreateFooRequest {
  string name = 1 [(validate.rules).string.min_len = 1];
}

message CreateFooResponse {
  Foo foo = 1;
}
